--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="Slide 1">
+                    <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="Referee">
                   </div>
                   <div class="carousel-item">
-                    <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="Slide 2">
+                    <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="Hiking">
                   </div>
                   <div class="carousel-item">
-                    <img src="assets/images/Beardy.png" class="d-block w-100" alt="Slide 3">
+                    <img src="assets/images/Beardy.png" class="d-block w-100" alt="Beard">
                   </div>
                   <div class="carousel-item">
-                    <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" style="height: 300px;">
+                    <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq">
                 </div>
                 </div>
                 <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -163,7 +163,7 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-              
+
                 <!-- JavaScript to set the interval for autoplay -->
 <script>
     $('.carousel').carousel({
