--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <!-- Bootstrap CSS -->
 
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    
-<!-- Custom CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -30,11 +29,10 @@
     <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 
     <!-- Navigation -->
-
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.png" alt="Logo" class="logo">
+                <img src="assets/images/" alt="" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +53,7 @@
                         <a class="nav-link" href="#Join">Join Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="find-a-shed.html">Find a shed</a>
+                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
                     </li>
                 </ul>
             </div>
@@ -132,42 +130,34 @@
             </div>
 </section>
 
-<!-- Carousel -->
+<!-- Gallery -->
 <section>
     <div class="container mx-auto section">
         <h3>Gallery:</h3>
         <div class="row">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel" data-bs-interval="100">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="Referee">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="Hiking">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/images/Beardy.png" class="d-block w-100" alt="Beard">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq">
+                    <div class="carousel-item active">
+                        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="referee" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="hikers" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/Beardy.png" class="d-block w-100" alt="beardies" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" style="height: 300px;">
+                    </div>
                 </div>
-                </div>
-                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-
-                <!-- JavaScript to set the interval for autoplay -->
-<script>
-    $('.carousel').carousel({
-      interval: 2000 // Change the interval time (in milliseconds) as needed
-    });
-  </script>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </div>
@@ -287,12 +277,7 @@
 
 <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
-
- <!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-
 </body>
+
 </html>
 
